[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
description = "Python solutions to Advent of Code 2023"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "aoc.__version__" }
dependencies = { file = ["requirements.txt"] }

[project.scripts]
aoc2023py = "aoc.cli:main"
